random pics generation added

--- a/views/end.erb
+++ b/views/end.erb
@@ -8,16 +8,16 @@
     </div>
     <div data-role="content">
         <h2>
-            So You FeLL oUt lOVe!
+            So you fell out love!
         </h2>
         <h1>
-            ConGrAtuLaTioNs!
+            Congratulations!
         </h1>
         <h5>
-            If YOu eVer neEdeD to rePeAt The pROceDuRe of faLliNg oUt Love,
+            If You ever needed to repeat the procedure of falling out love,
         </h5>
         <h3>
-            You May sTArt iT hEre..
+            You may start it here..
         </h3>
         <a data-role="button" href="/form">
             Restart procedure
